# my-agents

./: .env.example  .gitignore  nohup_start.sh  pyproject.toml  setup.py  start.sh  test.sh
app/: __init__.py  config.py
app/api/: main.py
app/services/: llm_service.py
src/hello_agents/: __init__.py
src/hello_agents/agents/: __init__.py  react_agent.py  simple_agent.py
src/hello_agents/context/: builder.py
src/hello_agents/core/: __init__.py  agent.py  exceptions.py  llm.py
src/hello_agents/evaluation/: __init__.py
src/hello_agents/evaluation/benchmarks/: __init__.py
src/hello_agents/memory/: __init__.py  base.py  embedding.py  manager.py
src/hello_agents/memory/rag/: document.py  pipeline.py
src/hello_agents/memory/storage/: __init__.py  document_store.py  neo4j_store.py  qdrant_store.py
src/hello_agents/memory/types/: __init__.py  episodic.py  perceptual.py  semantic.py  working.py
src/hello_agents/protocols/: __init__.py
src/hello_agents/protocols/a2a/: __init__.py
src/hello_agents/rl/: datasets.py  rewards.py  trainers.py  utils.py
src/hello_agents/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
tests/unit/test_agents/: test_function_call_agent.py  test_plan_solve_agent.py  test_react_agent.py  test_reflection_agent.py  test_simple_agent.py  test_tool_aware_agent.py
tests/unit/test_api/: test_app.py
tests/unit/test_core/: test_llm.py
tests/unit/test_memory/: test_embedding.py
tests/unit/test_services/: test_llm_service.py
tests/unit/test_tools/: test_async_executor.py  test_chain.py  test_registry.py
(+34 files in other folders)
