[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-agents"
version = "0.2.8"
requires-python = ">=3.10"

dependencies = [
    # 核心依赖
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=0.19.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi",
    "uvicorn[standard]>=0.32.0",

    # 基础工具库
    "numpy>=2.0.0,<3.0.0"
]

[project.optional-dependencies]
# 搜索功能依赖
search = [
    "tavily-python>=0.7.12"
]

# 记忆系统依赖
memory = [
    "qdrant-client>=1.9.0",          # 向量数据库（已兼容1.16.0+新API）
    "neo4j>=5.0.0",                  # 图数据库
    "spacy>=3.4.0",                  # NLP和实体识别
    "scikit-learn>=1.0.0",           # 机器学习工具
]

# 全部功能（不含evaluation-bfcl，因其与numpy>=2.0冲突）
all = [
    "hello-agents[search,memory]",
]

[tool.setuptools.packages.find]
where = ["src"]

